--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,6 @@
-# spring:
-#   application:
-#     name: RATING-SERVICE
+spring:
+  application:
+    name: CONFIG-DEFAULT
 eureka:
   instance:
     prefer-ip-address: true
